css fixes for hotspot scrollbar and mouse

--- a/pixplot/web/assets/css/style.css
+++ b/pixplot/web/assets/css/style.css
@@ -336,7 +336,7 @@ select:disabled {
 .settings-label {
   font-size: 12px;
   color: #999;
-  font-weight: 600;
+  font-weight: 300;
   display: inline-block;
   margin: 10px 5px;
 }
@@ -653,9 +653,11 @@ nav {
 #nav-inner {
   height: 100%;
   max-height: 100%;
+  /*
   overflow-x: hidden;
   overflow-y: auto;
   padding-right: 30px;
+  */
   transition: opacity 0.5s;
   box-sizing: content-box;
   width: 100%;
@@ -678,14 +680,17 @@ nav h2 {
 }
 
 #hotspots {
-  width: 75px;
+  width: 106px;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .hotspot {
-  padding: 12px 15px 5px;
+  padding: 8px 8px 0px;
   display: inline-block;
   text-align: center;
-  width: 75px;
+  width: 74px;
   font-size: 12px;
   color: #b3b3b3;
   position: relative;
@@ -737,12 +742,12 @@ nav h2 {
 
 .hotspot .remove-hotspot-x,
 .hotspot .refresh-hotspot {
-  top: 6px;
+  top: 4px;
   box-shadow: 0px 0px 3px #000;
 }
 
 .hotspot .remove-hotspot-x {
-  right: 9px;
+  right: 2px;
   background: #9c1717;
   color: #eee;
   line-height: 12px;
@@ -759,7 +764,7 @@ nav h2 {
 }
 
 .hotspot .drag-hotspot {
-  left: 6px;
+  left: 4px;
   font-size: 19px;
   line-height: 12px;
   cursor: grab;
@@ -776,7 +781,7 @@ nav h2 {
 
 .hotspot .refresh-hotspot {
   position: absolute;
-  left: 9px;
+  left: 2px;
   padding: 2px;
   display: none;
   background: #414141;
